--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,11 @@ body {
     margin:0;
     padding:0;
 }
+
+.weathercard {
+    border : 1px solid;
+    backdrop-filter: blur(5px);
+    width: 100%;
+    bottom:0;
+    /* left:25%; */
+}
