--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,27 @@ body {
 .weathercard {
     border : 1px solid;
     backdrop-filter: blur(5px);
-    width: 100%;
     bottom:0;
-    /* left:25%; */
+    p {
+        margin:0;
+    }
+}
+
+/* .cardimg {
+    object-fit: cover;
+} */
+
+.weatherbtn {
+    border-radius : 10px;
+    padding: .5rem;
+}
+
+.weatherbtn:hover {
+    color:white;
+    background: black;
+}
+
+.weathericon {
+    width:50px;
+    height:50px;
 }
